--- a/.gitconfig
+++ b/.gitconfig
@@ -2,17 +2,19 @@
   name = Rohan Garg
   email = rhn.grg@gmail.com
 [color]
-	branch = auto
-	diff = auto
-	status = auto
+  branch = auto
+  diff = auto
+  status = auto
   showbranch = auto
-	ui = true
+  ui = true
 [alias]
-	ci = commit
-	co = checkout
-	reb = rebase -i
-	ll = log --oneline --decorate
-	st = status
+  ci = commit
+  co = checkout
+  reb = rebase -i
+  ll = log --oneline --decorate
+  st = status
 [diff]
   mnemonicPrefix = true
   renames = true
+[core]
+  editor = vim
